# stackbridge-test

./: .env.docker  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  ruff.toml
migrations/: env.py
migrations/versions/: 15cd439135b9_add_tables.py  50f225e84342_init.py
src/: main.py
src/api/: admin.py  auth.py  mock.py  users.py
src/core/: config.py  database.py  dependencies.py  security.py
src/models/: rbac.py  user.py
src/repositories/: rbac.py  user.py
src/schemas/: rbac.py  user.py
src/services/: auth.py  rbac.py
tests/: conftest.py  test_auth_and_rbac.py
