[project]
name = "custom-auth-rbac"
version = "0.1.0"
description = "Custom Auth and RBAC system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.5.3",
    "pydantic-settings>=2.1.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "alembic>=1.13.1",
]

