[project]
name = "stackbridge-test"
version = "0.1.0"
description = "Auth system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.5.3",
    "pydantic-settings>=2.1.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "alembic>=1.13.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
    "aiosqlite>=0.22.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]
